--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,73 +39,10 @@ excludes=
 
 
 
-file.reference.google-api-client-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-1.32.1.jar
-file.reference.google-api-client-appengine-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-appengine-1.32.1-sources.jar
-file.reference.google-api-client-appengine-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-appengine-1.32.1.jar
-file.reference.google-api-client-gson-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-gson-1.32.1-sources.jar
-file.reference.google-api-client-gson-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-gson-1.32.1.jar
-file.reference.google-api-client-jackson2-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-jackson2-1.32.1-sources.jar
-file.reference.google-api-client-jackson2-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-jackson2-1.32.1.jar
-file.reference.google-api-client-java6-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-java6-1.32.1-sources.jar
-file.reference.google-api-client-java6-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-java6-1.32.1.jar
-file.reference.google-api-client-protobuf-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-protobuf-1.32.1-sources.jar
-file.reference.google-api-client-protobuf-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-protobuf-1.32.1.jar
-file.reference.google-api-client-servlet-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-servlet-1.32.1-sources.jar
-file.reference.google-api-client-servlet-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-servlet-1.32.1.jar
-file.reference.google-api-client-xml-1.32.1-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-xml-1.32.1-sources.jar
-file.reference.google-api-client-xml-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-client-xml-1.32.1.jar
-file.reference.google-api-services-gmail-v1-rev20210614-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-api-services-gmail-v1-rev20210614-1.32.1.jar
-file.reference.google-http-client-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-1.39.2-sources.jar
-file.reference.google-http-client-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-1.39.2.jar
-file.reference.google-http-client-apache-v2-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-apache-v2-1.39.2-sources.jar
-file.reference.google-http-client-apache-v2-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-apache-v2-1.39.2.jar
-file.reference.google-http-client-appengine-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-appengine-1.39.2-sources.jar
-file.reference.google-http-client-appengine-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-appengine-1.39.2.jar
-file.reference.google-http-client-gson-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-gson-1.39.2-sources.jar
-file.reference.google-http-client-gson-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-gson-1.39.2.jar
-file.reference.google-http-client-protobuf-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-protobuf-1.39.2-sources.jar
-file.reference.google-http-client-protobuf-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-protobuf-1.39.2.jar
-file.reference.google-http-client-xml-1.39.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-xml-1.39.2-sources.jar
-file.reference.google-http-client-xml-1.39.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-http-client-xml-1.39.2.jar
-file.reference.google-oauth-client-1.31.5-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-1.31.5-sources.jar
-file.reference.google-oauth-client-1.31.5.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-1.31.5.jar
-file.reference.google-oauth-client-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-1.32.1.jar
-file.reference.google-oauth-client-java6-1.31.5-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-java6-1.31.5-sources.jar
-file.reference.google-oauth-client-java6-1.31.5.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-java6-1.31.5.jar
-file.reference.google-oauth-client-java6-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-java6-1.32.1.jar
-file.reference.google-oauth-client-jetty-1.32.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google-oauth-client-jetty-1.32.1.jar
-file.reference.google_http_client-1.0.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google_http_client-1.0.1.jar
-file.reference.google_http_client_jackson2-1.0.1.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\google_http_client_jackson2-1.0.1.jar
-file.reference.grpc-context-1.27.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\grpc-context-1.27.2-sources.jar
-file.reference.grpc-context-1.27.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\grpc-context-1.27.2.jar
-file.reference.gson-2.8.6-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\gson-2.8.6-sources.jar
-file.reference.gson-2.8.6.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\gson-2.8.6.jar
-file.reference.guava-30.1-jre.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\guava-30.1-jre.jar
-file.reference.guava-30.1.1-android-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\guava-30.1.1-android-sources.jar
-file.reference.guava-30.1.1-android.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\guava-30.1.1-android.jar
-file.reference.httpclient-4.5.13-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\httpclient-4.5.13-sources.jar
-file.reference.httpclient-4.5.13.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\httpclient-4.5.13.jar
-file.reference.httpcore-4.4.14-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\httpcore-4.4.14-sources.jar
-file.reference.httpcore-4.4.14.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\httpcore-4.4.14.jar
-file.reference.j2objc-annotations-1.3-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\j2objc-annotations-1.3-sources.jar
-file.reference.j2objc-annotations-1.3.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\j2objc-annotations-1.3.jar
-file.reference.jackson-core-2.12.0.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\jackson-core-2.12.0.jar
 file.reference.javaee-web-api-8.0.jar=lib/javaee-web-api-8.0.jar
 file.reference.javaee-web-api-8.0.jar-1=javaee-web-api-8.0.jar
-file.reference.javax.mail.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\javax.mail.jar
-file.reference.jsr305-3.0.2-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\jsr305-3.0.2-sources.jar
-file.reference.jsr305-3.0.2.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\jsr305-3.0.2.jar
 file.reference.lib-eclipselink=lib/eclipselink
-file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
 file.reference.mysql-connector-java-8.0.25.jar=mysql-connector-java-8.0.25.jar
-file.reference.opencensus-api-0.28.0-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\opencensus-api-0.28.0-sources.jar
-file.reference.opencensus-api-0.28.0.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\opencensus-api-0.28.0.jar
-file.reference.opencensus-contrib-http-util-0.28.0-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\opencensus-contrib-http-util-0.28.0-sources.jar
-file.reference.opencensus-contrib-http-util-0.28.0.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\opencensus-contrib-http-util-0.28.0.jar
-file.reference.protobuf-java-3.17.3-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\protobuf-java-3.17.3-sources.jar
-file.reference.protobuf-java-3.17.3.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\protobuf-java-3.17.3.jar
-file.reference.xpp3-1.1.4c-sources.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\xpp3-1.1.4c-sources.jar
-file.reference.xpp3-1.1.4c.jar=..\\..\\..\\Documents\\NetBeansProjects\\GmailAPIS\\build\\web\\WEB-INF\\lib\\xpp3-1.1.4c.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=false
@@ -117,70 +54,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javaee-web-api-8.0.jar-1}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.google-api-client-appengine-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-appengine-1.32.1.jar}:\
-    ${file.reference.google-api-client-gson-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-gson-1.32.1.jar}:\
-    ${file.reference.google-api-client-jackson2-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-jackson2-1.32.1.jar}:\
-    ${file.reference.google-api-client-java6-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-java6-1.32.1.jar}:\
-    ${file.reference.google-api-client-protobuf-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-protobuf-1.32.1.jar}:\
-    ${file.reference.google-api-client-servlet-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-servlet-1.32.1.jar}:\
-    ${file.reference.google-api-client-xml-1.32.1-sources.jar}:\
-    ${file.reference.google-api-client-xml-1.32.1.jar}:\
-    ${file.reference.google-api-services-gmail-v1-rev20210614-1.32.1.jar}:\
-    ${file.reference.google-http-client-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-1.39.2.jar}:\
-    ${file.reference.google-http-client-apache-v2-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-apache-v2-1.39.2.jar}:\
-    ${file.reference.google-http-client-appengine-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-appengine-1.39.2.jar}:\
-    ${file.reference.google-http-client-gson-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-gson-1.39.2.jar}:\
-    ${file.reference.google-http-client-protobuf-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-protobuf-1.39.2.jar}:\
-    ${file.reference.google-http-client-xml-1.39.2-sources.jar}:\
-    ${file.reference.google-http-client-xml-1.39.2.jar}:\
-    ${file.reference.google-oauth-client-1.31.5-sources.jar}:\
-    ${file.reference.google-oauth-client-1.31.5.jar}:\
-    ${file.reference.google-oauth-client-1.32.1.jar}:\
-    ${file.reference.google-oauth-client-java6-1.31.5-sources.jar}:\
-    ${file.reference.google-oauth-client-java6-1.31.5.jar}:\
-    ${file.reference.google-oauth-client-java6-1.32.1.jar}:\
-    ${file.reference.google-oauth-client-jetty-1.32.1.jar}:\
-    ${file.reference.google_http_client-1.0.1.jar}:\
-    ${file.reference.google_http_client_jackson2-1.0.1.jar}:\
-    ${file.reference.grpc-context-1.27.2-sources.jar}:\
-    ${file.reference.grpc-context-1.27.2.jar}:\
-    ${file.reference.gson-2.8.6-sources.jar}:\
-    ${file.reference.gson-2.8.6.jar}:\
-    ${file.reference.guava-30.1-jre.jar}:\
-    ${file.reference.guava-30.1.1-android-sources.jar}:\
-    ${file.reference.guava-30.1.1-android.jar}:\
-    ${file.reference.httpclient-4.5.13-sources.jar}:\
-    ${file.reference.httpclient-4.5.13.jar}:\
-    ${file.reference.httpcore-4.4.14-sources.jar}:\
-    ${file.reference.httpcore-4.4.14.jar}:\
-    ${file.reference.j2objc-annotations-1.3-sources.jar}:\
-    ${file.reference.j2objc-annotations-1.3.jar}:\
-    ${file.reference.jackson-core-2.12.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jsr305-3.0.2-sources.jar}:\
-    ${file.reference.jsr305-3.0.2.jar}:\
-    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
-    ${file.reference.opencensus-api-0.28.0-sources.jar}:\
-    ${file.reference.opencensus-api-0.28.0.jar}:\
-    ${file.reference.opencensus-contrib-http-util-0.28.0-sources.jar}:\
-    ${file.reference.opencensus-contrib-http-util-0.28.0.jar}:\
-    ${file.reference.protobuf-java-3.17.3-sources.jar}:\
-    ${file.reference.protobuf-java-3.17.3.jar}:\
-    ${file.reference.xpp3-1.1.4c-sources.jar}:\
-    ${file.reference.xpp3-1.1.4c.jar}:\
-    ${file.reference.google-api-client-1.32.1.jar}
+    ${libs.eclipselink.classpath}
     ${file.reference.javaee-web-api-8.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${libs.eclipselink.classpath}
