--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -74,7 +74,11 @@
     </servlet>
     <servlet>
         <servlet-name>ConfirmaCitaAdmin</servlet-name>
-        <servlet-class>ControladorVistas.ConfirmaCitaAdmin</servlet-class>
+        <servlet-class>ControladorVistas.ConfirmaAsistenciaAdmin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ConfirmaServicioAdmin</servlet-name>
+        <servlet-class>ControladorVistas.ConfirmaServicioAdmin</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
@@ -143,6 +147,10 @@
     <servlet-mapping>
         <servlet-name>ConfirmaCitaAdmin</servlet-name>
         <url-pattern>/ConfirmaCitaAdmin.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ConfirmaServicioAdmin</servlet-name>
+        <url-pattern>/ConfirmaServicioAdmin.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>5</session-timeout>
