--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -139,13 +139,21 @@
         <servlet-name>MostrarServiProduAdmin</servlet-name>
         <servlet-class>ControladorVistas.MostrarServiProduAdmin</servlet-class>
     </servlet>
-     <servlet>
+    <servlet>
         <servlet-name>EliminarCita</servlet-name>
         <servlet-class>ControladorVistas.EliminarCita</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>MostrarDatosAgendaConfirAdmin</servlet-name>
         <servlet-class>ControladorVistas.MostrarDatosAgendaConfirAdmin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdatePersona</servlet-name>
+        <servlet-class>ControladorVistas.UpdatePersona</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdatePassword</servlet-name>
+        <servlet-class>ControladorVistas.UpdatePassword</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
@@ -262,6 +270,14 @@
     <servlet-mapping>
         <servlet-name>MostrarDatosAgendaConfirAdmin</servlet-name>
         <url-pattern>/MostrarDatosAgendaConfirAdmin.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdatePersona</servlet-name>
+        <url-pattern>/UpdatePersona.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdatePassword</servlet-name>
+        <url-pattern>/UpdatePassword.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>15</session-timeout>
