--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -16,11 +16,8 @@ j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apac
 
 
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
 
-j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 
@@ -119,6 +116,9 @@ j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
@@ -172,15 +172,15 @@ deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\to
 deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
-deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 
 j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 
 javac.debug=true
 javadoc.preview=true
@@ -190,7 +190,7 @@ user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
 
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=default
 
 user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
@@ -214,6 +214,6 @@ user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.pr
 
 user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
 
-user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
