--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -139,6 +139,18 @@
         <servlet-name>MostrarDatosAgendaConfirAdmin</servlet-name>
         <servlet-class>ControladorVistas.MostrarDatosAgendaConfirAdmin</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProcesarAtencionServicio</servlet-name>
+        <servlet-class>ControladorVistas.ProcesarAtencionServicio</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CargarAddVehiculo</servlet-name>
+        <servlet-class>ControladorVistas.CargarAddVehiculo</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddVehiculo</servlet-name>
+        <servlet-class>ControladorVistas.AddVehiculo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -246,6 +258,18 @@
     <servlet-mapping>
         <servlet-name>MostrarDatosAgendaConfirAdmin</servlet-name>
         <url-pattern>/MostrarDatosAgendaConfirAdmin.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcesarAtencionServicio</servlet-name>
+        <url-pattern>/ProcesarAtencionServicio.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CargarAddVehiculo</servlet-name>
+        <url-pattern>/CargarAddVehiculo.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddVehiculo</servlet-name>
+        <url-pattern>/AddVehiculo.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>15</session-timeout>
