--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -13,7 +13,6 @@ file.reference.javaee-web-api-8.0.jar=E:\\2021-2\\API\\PROYECTO\\aplicativoWebLu
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -120,6 +119,7 @@ j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
@@ -178,8 +178,8 @@ j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0
 
 deploy.ant.properties.file=/home/johnny/.netbeans/11.0/tomcat80.properties
 j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-deploy.ant.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
-j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/mcris/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
 
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
@@ -187,7 +187,7 @@ j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation
 
 j2ee.server.instance=tomcat80:home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\apache-tomcat-8.5.60
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 
 javac.debug=true
 javadoc.preview=true
@@ -224,5 +224,5 @@ user.properties.file=C:\\Users\\Acer\\AppData\\Roaming\\NetBeans\\12.4\\build.pr
 user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 user.properties.file=/home/johnny/.netbeans/11.0/build.properties
-user.properties.file=C:\\Users\\Jarlin\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\mcris\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
