--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -175,6 +175,10 @@
         <servlet-name>UpdatePassword</servlet-name>
         <servlet-class>ControladorVistas.UpdatePassword</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MostrarEstadisticas</servlet-name>
+        <servlet-class>ControladorVistas.MostrarEstadisticas</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -318,6 +322,10 @@
     <servlet-mapping>
         <servlet-name>UpdatePassword</servlet-name>
         <url-pattern>/UpdatePassword.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarEstadisticas</servlet-name>
+        <url-pattern>/MostrarEstadisticas.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>35</session-timeout>
