--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -179,6 +179,10 @@
         <servlet-name>ValoresEstadisticas</servlet-name>
         <servlet-class>ControladorVistas.ValoresEstadisticas</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MostrarServiciosCotizacion</servlet-name>
+        <servlet-class>ControladorVistas.MostrarServiciosCotizacion</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniciarSesion</servlet-name>
         <url-pattern>/IniciarSesion.do</url-pattern>
@@ -326,6 +330,10 @@
     <servlet-mapping>
         <servlet-name>ValoresEstadisticas</servlet-name>
         <url-pattern>/ValoresEstadisticas.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MostrarServiciosCotizacion</servlet-name>
+        <url-pattern>/MostrarServiciosCotizacion.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>35</session-timeout>
