--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -12,7 +12,6 @@ deploy.ant.properties.file=C:\\Users\\Jeferson Rodriguez\\AppData\\Roaming\\NetB
 file.reference.javaee-web-api-8.0.jar=E:\\2021-2\\API\\PROYECTO\\aplicativoWebLubrillantasJezreelAg\\javaee-web-api-8.0.jar
 j2ee.server.domain=C:/Users/Jeferson Rodriguez/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 
-j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
@@ -119,6 +118,7 @@ j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=/home/johnny/NetBeansProjects/apache-tomcat-8.5.72
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
 j2ee.server.home=C:/Program Files/apache-tomcat-8.5.60
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
